--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Maxim Rozhanskiy Portfolio</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </head>
@@ -90,11 +89,9 @@
                     <div class="content" style="--j:1">
                         <div class="content-inner">
                             <div class="percent">
-                                <svg>
-                                    <circle cx="70" cy="70" r="70" class="progressbar"></circle>
-                                    <circle cx="70" cy="70" r="70" class="progressbar"></circle>
-                                    <circle cx="40" cy="40" r="40" class="progressbar-middle"></circle>
-                                    <circle cx="40" cy="40" r="40" class="progressbar-middle"></circle>
+                                <svg class="progress-ring" width='140' height='140'>
+                                    <circle class="progressbar" cx="50%" cy='50%' r='45%' fill='transparent'
+                                        stroke="#DD4B25" />
                                 </svg>
                                 <div class="number">
                                     <h2>80<span>%</span></h2>
@@ -108,11 +105,9 @@
                     <div class="content" style="--j:2">
                         <div class="content-inner">
                             <div class="percent">
-                                <svg>
-                                    <circle cx="70" cy="70" r="70" class="progressbar"></circle>
-                                    <circle cx="70" cy="70" r="70" class="progressbar"></circle>
-                                    <circle cx="40" cy="40" r="40" class="progressbar-middle"></circle>
-                                    <circle cx="40" cy="40" r="40" class="progressbar-middle"></circle>
+                                <svg class="progress-ring" width='140' height='140'>
+                                    <circle class="progressbar" cx="50%" cy='50%' r='45%' fill='transparent'
+                                        stroke="#00a1ff" />
                                 </svg>
                                 <div class="number">
                                     <h2>75<span>%</span></h2>
@@ -126,14 +121,12 @@
                     <div class="content" style="--j:3">
                         <div class="content-inner">
                             <div class="percent">
-                                <svg>
-                                    <circle cx="70" cy="70" r="70" class="progressbar"></circle>
-                                    <circle cx="70" cy="70" r="70" class="progressbar"></circle>
-                                    <circle cx="40" cy="40" r="40" class="progressbar-middle"></circle>
-                                    <circle cx="40" cy="40" r="40" class="progressbar-middle"></circle>
+                                <svg class="progress-ring" width='140' height='140'>
+                                    <circle class="progressbar" cx="50%" cy='50%' r='45%' fill='transparent'
+                                        stroke="#E5A228" />
                                 </svg>
                                 <div class="number">
-                                    <h2>20<span>%</span></h2>
+                                    <h2>70<span>%</span></h2>
                                 </div>
                             </div>
                             <h2 class="inner-text">JS</h2>
@@ -144,11 +137,9 @@
                     <div class="content" style="--j:4">
                         <div class="content-inner">
                             <div class="percent">
-                                <svg>
-                                    <circle cx="70" cy="70" r="70" class="progressbar"></circle>
-                                    <circle cx="70" cy="70" r="70" class="progressbar"></circle>
-                                    <circle cx="40" cy="40" r="40" class="progressbar-middle"></circle>
-                                    <circle cx="40" cy="40" r="40" class="progressbar-middle"></circle>
+                                <svg class="progress-ring" width='140' height='140'>
+                                    <circle class="progressbar" cx="50%" cy='50%' r='45%' fill='transparent'
+                                        stroke="#171516" />
                                 </svg>
                                 <div class="number">
                                     <h2>50<span>%</span></h2>
@@ -162,11 +153,9 @@
                     <div class="content" style="--j:5">
                         <div class="content-inner">
                             <div class="percent">
-                                <svg>
-                                    <circle cx="70" cy="70" r="70" class="progressbar"></circle>
-                                    <circle cx="70" cy="70" r="70" class="progressbar"></circle>
-                                    <circle cx="40" cy="40" r="40" class="progressbar-middle"></circle>
-                                    <circle cx="40" cy="40" r="40" class="progressbar-middle"></circle>
+                                <svg class="progress-ring" width='140' height='140'>
+                                    <circle class="progressbar" cx="50%" cy='50%' r='45%' fill='transparent'
+                                        stroke="#634F96" />
                                 </svg>
                                 <div class="number">
                                     <h2>40<span>%</span></h2>
@@ -180,11 +169,9 @@
                     <div class="content" style="--j:6">
                         <div class="content-inner">
                             <div class="percent">
-                                <svg>
-                                    <circle cx="70" cy="70" r="70" class="progressbar"></circle>
-                                    <circle cx="70" cy="70" r="70" class="progressbar"></circle>
-                                    <circle cx="40" cy="40" r="40" class="progressbar-middle"></circle>
-                                    <circle cx="40" cy="40" r="40" class="progressbar-middle"></circle>
+                                <svg class="progress-ring" width='140' height='140'>
+                                    <circle class="progressbar" cx="50%" cy='50%' r='45%' fill='transparent'
+                                        stroke="#CA4545" />
                                 </svg>
                                 <div class="number">
                                     <h2>35<span>%</span></h2>
@@ -195,70 +182,71 @@
                     </div>
                 </div>
             </div>
+    </div>
 
-        </section>
-        <section id="projects" class="projects">
-            <div class="projects-title" data-aos="fade-right">
-                <h2 class="headline">
-                    Projects
-                </h2>
-            </div>
-            <p class="projects-description" data-aos="fade-down">Examples of my latest projects build with HTML, CSS and
-                JavaScript.</p>
+    </section>
+    <section id="projects" class="projects">
+        <div class="projects-title" data-aos="fade-right">
+            <h2 class="headline">
+                Projects
+            </h2>
+        </div>
+        <p class="projects-description" data-aos="fade-down">Examples of my latest projects build with HTML, CSS and
+            JavaScript.</p>
 
-            <div class="projects-items">
-                <div class="projects-item" data-aos="fade-right">
-                    <a href="https://maximrozh.github.io/markup/" target="_blank">
-                        <img src="dist/img/proj1.png" class="projects-item-thumbnail" alt="image hover effects">
-                        <h2 class="projects-item-info">MyLib</h2>
-                        <div class="projects-item-hover">
-                            <h2 class="projects-item-hover-title">
-                                MyLib
-                            </h2>
-                            <p class="projects-item-hover-description">Component library with html and css code examples
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                <div class="projects-item" data-aos="fade-left">
-                    <a href="https://maximrozh.github.io/Responsive/" target="_blank">
-                        <img src="dist/img/proj2.png" class="projects-item-thumbnail" alt="image hover effects">
-                        <h2 class="projects-item-info">Responsive web-site</h2>
-                        <div class="projects-item-hover">
-                            <h2 class="projects-item-hover-title">
-                                Responsive web-site
-                            </h2>
-                            <p class="projects-item-hover-description">html page with burger menu and carousel using
-                                JQuery
-                            </p>
-                        </div>
-                    </a>
-                </div>
+        <div class="projects-items">
+            <div class="projects-item" data-aos="fade-right">
+                <a href="https://maximrozh.github.io/markup/" target="_blank">
+                    <img src="dist/img/proj1.png" class="projects-item-thumbnail" alt="image hover effects">
+                    <h2 class="projects-item-info">MyLib</h2>
+                    <div class="projects-item-hover">
+                        <h2 class="projects-item-hover-title">
+                            MyLib
+                        </h2>
+                        <p class="projects-item-hover-description">Component library with html and css code examples
+                        </p>
+                    </div>
+                </a>
             </div>
-        </section>
-        <footer id="contacts" class="footer">
-            <div class="footer-title" data-aos="zoom-in" data-aos-easing="ease-in-out" data-aos-duration="900">
-                <h2 class="headline">Contacts</h2>
+            <div class="projects-item" data-aos="fade-left">
+                <a href="https://maximrozh.github.io/Responsive/" target="_blank">
+                    <img src="dist/img/proj2.png" class="projects-item-thumbnail" alt="image hover effects">
+                    <h2 class="projects-item-info">Responsive web-site</h2>
+                    <div class="projects-item-hover">
+                        <h2 class="projects-item-hover-title">
+                            Responsive web-site
+                        </h2>
+                        <p class="projects-item-hover-description">html page with burger menu and carousel using
+                            JQuery
+                        </p>
+                    </div>
+                </a>
             </div>
-            <div class="footer-description">
-                <h2 class="h2">GET IN TOUCH</h2>
+        </div>
+    </section>
+    <footer id="contacts" class="footer">
+        <div class="footer-title" data-aos="zoom-in" data-aos-easing="ease-in-out" data-aos-duration="900">
+            <h2 class="headline">Contacts</h2>
+        </div>
+        <div class="footer-description">
+            <h2 class="h2">GET IN TOUCH</h2>
+        </div>
+        <div class="footer-container">
+            <div class="footer-text">
+                <p>You can reach me via email or find me on social networks.
+                    I would love to hear from you!</p>
             </div>
-            <div class="footer-container">
-                <div class="footer-text">
-                    <p>You can reach me via email or find me on social networks.
-                        I would love to hear from you!</p>
-                </div>
-                <div class="footer-email"><a href="mailto:rozhasnkiy2123@gmail.com">rozhasnkiy2123@gmail.com</a></div>
-            </div>
-            <div class="flex-center">
-                <a href="https://github.com/MaximRozh"><i class="fa fa-github fa-3x icon-3d">&nbsp;</i></a>
-                <a href="https://www.linkedin.com/in/maxim-rozhanskiy-90458a1b1/"><i
-                        class="fa fa-linkedin-square fa-3x icon-3d">&nbsp;</i></a>
-                <a href="https://www.instagram.com/rozhanskiy/"><i class="fa fa-instagram fa-3x icon-3d">&nbsp;</i></a>
-                <a href="https://t.me/Rozhanskiy"><i class="fa fa-telegram fa-3x icon-3d">&nbsp;</i></a>
+            <div class="footer-email"><a href="mailto:rozhasnkiy2123@gmail.com">rozhasnkiy2123@gmail.com</a></div>
+        </div>
+        <div class="flex-center">
+            <a href="https://github.com/MaximRozh"><i class="fa fa-github fa-3x icon-3d">&nbsp;</i></a>
+            <a href="https://www.linkedin.com/in/maxim-rozhanskiy-90458a1b1/"><i
+                    class="fa fa-linkedin-square fa-3x icon-3d">&nbsp;</i></a>
+            <a href="https://www.instagram.com/rozhanskiy/"><i class="fa fa-instagram fa-3x icon-3d">&nbsp;</i></a>
+            <a href="https://t.me/Rozhanskiy"><i class="fa fa-telegram fa-3x icon-3d">&nbsp;</i></a>
 
-            </div>
-        </footer>
+        </div>
+    </footer>
 
     </div>
     <script src="dist/js/script.min.js"></script>
