--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                         stroke="#DD4B25" />
                                 </svg>
                                 <div class="number">
-                                    <h2>80<span>%</span></h2>
+                                    <h2>90<span>%</span></h2>
                                 </div>
                             </div>
                             <h2 class="inner-text">Html</h2>
@@ -110,7 +110,7 @@
                                         stroke="#00a1ff" />
                                 </svg>
                                 <div class="number">
-                                    <h2>75<span>%</span></h2>
+                                    <h2>85<span>%</span></h2>
                                 </div>
                             </div>
                             <h2 class="inner-text">CSS</h2>
@@ -126,7 +126,7 @@
                                         stroke="#E5A228" />
                                 </svg>
                                 <div class="number">
-                                    <h2>70<span>%</span></h2>
+                                    <h2>90<span>%</span></h2>
                                 </div>
                             </div>
                             <h2 class="inner-text">JS</h2>
@@ -142,7 +142,7 @@
                                         stroke="#171516" />
                                 </svg>
                                 <div class="number">
-                                    <h2>50<span>%</span></h2>
+                                    <h2>70<span>%</span></h2>
                                 </div>
                             </div>
                             <h2 class="inner-text">Git</h2>
@@ -155,13 +155,13 @@
                             <div class="percent">
                                 <svg class="progress-ring" width='140' height='140'>
                                     <circle class="progressbar" cx="50%" cy='50%' r='45%' fill='transparent'
-                                        stroke="#634F96" />
+                                        stroke="#5BCDEB" />
                                 </svg>
                                 <div class="number">
-                                    <h2>40<span>%</span></h2>
+                                    <h2>80<span>%</span></h2>
                                 </div>
                             </div>
-                            <h2 class="inner-text">Bootstrap</h2>
+                            <h2 class="inner-text">React</h2>
                         </div>
                     </div>
                 </div>
@@ -171,13 +171,29 @@
                             <div class="percent">
                                 <svg class="progress-ring" width='140' height='140'>
                                     <circle class="progressbar" cx="50%" cy='50%' r='45%' fill='transparent'
-                                        stroke="#CA4545" />
+                                        stroke="#634F96" />
                                 </svg>
                                 <div class="number">
-                                    <h2>35<span>%</span></h2>
+                                    <h2>80<span>%</span></h2>
                                 </div>
                             </div>
-                            <h2 class="inner-text">Gulp</h2>
+                            <h2 class="inner-text">Redux</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="card" style="--i:5">
+                    <div class="content" style="--j:7">
+                        <div class="content-inner">
+                            <div class="percent">
+                                <svg class="progress-ring" width='140' height='140'>
+                                    <circle class="progressbar" cx="50%" cy='50%' r='45%' fill='transparent'
+                                        stroke="#007acc" />
+                                </svg>
+                                <div class="number">
+                                    <h2>75<span>%</span></h2>
+                                </div>
+                            </div>
+                            <h2 class="inner-text">TypeScript</h2>
                         </div>
                     </div>
                 </div>
@@ -196,14 +212,27 @@
 
         <div class="projects-items">
             <div class="projects-item" data-aos="fade-right">
-                <a href="https://maximrozh.github.io/markup/" target="_blank">
-                    <img src="dist/img/proj1.png" class="projects-item-thumbnail" alt="image hover effects">
-                    <h2 class="projects-item-info">MyLib</h2>
+                <a href="https://maximrozh.github.io/expense_tracker/" target="_blank">
+                    <img src="dist/img/expense_tracker.png" class="projects-item-thumbnail" alt="image hover effects">
+                    <h2 class="projects-item-info">Expenses tracker</h2>
                     <div class="projects-item-hover">
                         <h2 class="projects-item-hover-title">
-                            MyLib
+                            Track your expenses
                         </h2>
-                        <p class="projects-item-hover-description">Component library with html and css code examples
+                        <p class="projects-item-hover-description">Made with React, TypeScript, Recharts
+                        </p>
+                    </div>
+                </a>
+            </div>
+            <div class="projects-item" data-aos="fade-left">
+                <a href="https://maximrozh.github.io/vue-todo-list/" target="_blank">
+                    <img src="dist/img/todoList.png" class="projects-item-thumbnail" alt="image hover effects">
+                    <h2 class="projects-item-info">To do list</h2>
+                    <div class="projects-item-hover">
+                        <h2 class="projects-item-hover-title">
+                            To do list
+                        </h2>
+                        <p class="projects-item-hover-description">Simple to-do list with vue.js + vuex
                         </p>
                     </div>
                 </a>
@@ -218,6 +247,19 @@
                         </h2>
                         <p class="projects-item-hover-description">html page with burger menu and carousel using
                             JQuery
+                        </p>
+                    </div>
+                </a>
+            </div>
+            <div class="projects-item" data-aos="fade-right">
+                <a href="https://maximrozh.github.io/markup/" target="_blank">
+                    <img src="dist/img/proj1.png" class="projects-item-thumbnail" alt="image hover effects">
+                    <h2 class="projects-item-info">MyLib</h2>
+                    <div class="projects-item-hover">
+                        <h2 class="projects-item-hover-title">
+                            MyLib
+                        </h2>
+                        <p class="projects-item-hover-description">Component library with html and css code examples
                         </p>
                     </div>
                 </a>
