--- a/index.html
+++ b/index.html
@@ -212,6 +212,19 @@
 
         <div class="projects-items">
             <div class="projects-item" data-aos="fade-right">
+                <a href="https://maximrozh.github.io/event_calendar" target="_blank">
+                    <img src="dist/img/event_calendar.png" class="projects-item-thumbnail" alt="image hover effects">
+                    <h2 class="projects-item-info">Events calendar</h2>
+                    <div class="projects-item-hover">
+                        <h2 class="projects-item-hover-title">
+                            Events calendar
+                        </h2>
+                        <p class="projects-item-hover-description">Made with React, Redux, TypeScript, Ant design
+                        </p>
+                    </div>
+                </a>
+            </div>
+            <div class="projects-item" data-aos="fade-left">
                 <a href="https://maximrozh.github.io/expense_tracker/" target="_blank">
                     <img src="dist/img/expense_tracker.png" class="projects-item-thumbnail" alt="image hover effects">
                     <h2 class="projects-item-info">Expenses tracker</h2>
@@ -224,7 +237,7 @@
                     </div>
                 </a>
             </div>
-            <div class="projects-item" data-aos="fade-left">
+            <div class="projects-item" data-aos="fade-right">
                 <a href="https://maximrozh.github.io/vue-todo-list/" target="_blank">
                     <img src="dist/img/todoList.png" class="projects-item-thumbnail" alt="image hover effects">
                     <h2 class="projects-item-info">To do list</h2>
